fixed pages not fitting screen height

--- a/src/frontend/pages/Home.css
+++ b/src/frontend/pages/Home.css
@@ -1,4 +1,5 @@
 .home{
     flex: 4;
     background-color: #f8f8f8;
+    height: 100vh;
 }
